--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,14 +13,18 @@
       <section id="form-section">
         <h2>Enter your travel plans</h2>
         <form id="form">
-          <label for="city">Enter City:</label>
-          <input type="text" id="city" name="city">
-          <label for="state">Enter State/Province:</label>
-          <input type="text" id="state" name="state">
-          <label for="zip">Enter Zipcode:</label>
+          <h3>Please enter either a postal code or location details</h3>      
+          <label for="zip">Enter Postal Code:</label>
           <input type="text" id="zip" name="zip">
-          <label for="country">Enter Country:</label>
-          <input type="text" id="country" name="country">
+          <p class="or">OR</p>
+          <div class="destination">
+            <label for="city">Enter City:</label>
+            <input type="text" id="city" name="city">
+            <label for="state">Enter State:</label>
+            <input type="text" id="state" name="state">
+            <label for="country">Enter Country:</label>
+            <input type="text" id="country" name="country">
+          </div>
           <label for="date">When are you departing?</label>
           <input type="text" id="date" name="date">
 
