add date processing.  fetch weather for specified days

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -282,8 +282,10 @@
 
             </select>
           </div>
-          <label for="date">When are you departing?</label>
-          <input type="text" id="date" name="date" placeholder="mm/dd/yyyy">
+          <label for="start-date">When are you departing?</label>
+          <input type="text" id="start-date" name="start-date" placeholder="mm/dd/yyyy">
+          <label for="end-date">When are you returning?</label>
+          <input type="text" id="end-date" name="end-date" placeholder="mm/dd/yyyy">
 
           <button id="submit-form" class="box" type="submit">Get Info</button>
         </form>
