add historical weather option

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -290,11 +290,7 @@
           <button id="submit-form" class="box" type="submit">Get Info</button>
         </form>
       </section>
-      <section id="results-section" class="invisible">
-        <div id="results-div" class="">
-          <h2 class="">Info on travel plans:</h2>
-        </div>
-      </section>
+      <section id="results-section" class="invisible"></section>
     </main>
     <footer>
       <p class="copy">&copy;2020 Laura Franklin</p>
