add pixaby photo and backup photo

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -278,8 +278,6 @@
               <option class="country-option" value="YE">Yemen</option>
               <option class="country-option" value="ZM">Zambia</option>
               <option class="country-option" value="ZW">Zimbabwe</option>
-
-
             </select>
           </div>
           <label for="start-date">When are you departing?</label>
@@ -294,6 +292,7 @@
     </main>
     <footer>
       <p class="copy">&copy;2020 Laura Franklin</p>
+      <a href="https://pixabay.com/"><img width="50px" src="../media/pixabay_logo.png"></a>
     </footer>
   </body>
 </html>
