--- a/src/client/styles/results.scss
+++ b/src/client/styles/results.scss
@@ -1,10 +1,57 @@
+#results-section {
+  margin-top: 20px;
+  padding: 20px
+}
+
+#location-div {
+  align-items: center;
+  display: grid;
+  gap: 10px 10px;
+  grid: auto auto / 50% 50%;
+  justify-content: space-between;
+}
+
+#map-pix {
+  display: flex;
+}
+
+#map-div {
+  grid-column: 1 / 1;
+  grid-row: 2 / 2;
+  height: 400px;
+  width: 100%;
+}
+
+#pix-div {
+  grid-column: 2 / 2;
+  grid-row: 2 / 2;
+}
+
+.pix-img {
+
+}
+
 #weather-div {
   display: flex;
   flex-wrap: wrap
 }
 
+h3 {
+  grid-column: 1 / 1;
+  margin: 0;
+}
+
 h4 {
+  font-size: 1.3em;
+  margin: 30px 0 10px;
+  text-align: center;
   width: 100%;
+}
+
+.timezone {
+  justify-self: end;
+  grid-column: 2 / 2;
+  margin-right: 20px;
 }
 
 .bold {
@@ -12,7 +59,15 @@ h4 {
 }
 
 .forecast-div {
+  background-color: #eee;
   border: 1px solid #000;
+  color: #222;
+  flex-grow: 1;
   margin: 5px;
-  padding: 5px;
+  padding: 10px;
+}
+
+
+.dest-name {
+  font-size: 1.5em;
 }
