--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,6 +1,7 @@
 form {
   display: grid;
-  grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid: auto / 30% 30% 40%;
+  justify-content: space-between;
   margin: auto;
 }
 
@@ -8,86 +9,42 @@ form {
   width: 100%;
 }
 
-
 .instructions {
   font-size: 1.5em;
   font-weight: bold;
-  grid-column: 1 / 7;
   text-align: center;
 }
 
-.destination-div {
-  display: flex;
-  justify-content: space-between;
-}
-
-.destination {
-  display: flex;
-  flex-direction: column;
+.set {
+  justify-self: end;
+  margin: 20px 0;
 }
 
 label {
-  align-self: center;
   font-size: 1.15em;
-  margin: 0 5px;
+  margin-right: 5px;
 }
 
 .box {
-  align-self: center;
   background-color: #eee;
   border: 1px solid #333;
   border-radius: 8px;
   box-sizing: border-box;
   font-size: 1em;
   height: 40px;
-  margin: 10px;
   padding: 2px 10px;
 }
 
-input {
-  margin: 10px 10px 10px 0;
-}
-
-.or {
-  align-self: center;
-  margin: 10px  50px;
-  font-size: 1.2em;
-  font-weight: bold;
-}
-
-.far-left {
-  grid-column: 1 / 1;
-}
-
 .left {
-  grid-column: 2 / 2;
+  grid-template: 1 / 1
 }
 
 .middle {
-  grid-column: 3 / 3;
+  grid-template: 2 / 2
 }
 
-.middle-right {
-  grid-column: 4 / 4
-}
 .right {
-  grid-column: 5 / 5;
-}
-
-.far-right {
-  grid-column: 6 / 6;
-}
-
-.row-3 {
-  grid-row: 3 / 3;
-}
-
-.end {
-  justify-self: end;
-}
-
-.margin-top {
-  margin-top: 25px;
+  grid-template: 3 / 3
 }
 
 #submit-form {
@@ -96,11 +53,18 @@ input {
   color: #222;
   font-size: 1.2em;
   font-weight: bold;
+  height: 50px;
   padding: 10px;
+  width: 200px;
 
   &:hover {
   // background-color: #222;
   background: linear-gradient(rgb(181, 218, 255), rgb(48, 41, 251), rgb(181, 218, 255));
   color: #eee;
   }
+}
+
+#note {
+  font-size: 2em;
+  text-align: center;
 }
