--- a/src/client/styles/results.scss
+++ b/src/client/styles/results.scss
@@ -1,6 +1,5 @@
 #results-section {
-  margin-top: 20px;
-  padding: 20px
+  margin-top: 60px;
 }
 
 #location-div {
@@ -18,22 +17,25 @@
 #map-div {
   grid-column: 1 / 1;
   grid-row: 2 / 2;
-  height: 400px;
+  height: 100%;
+  margin-bottom: 5px;
   width: 100%;
 }
 
 #pix-div {
   grid-column: 2 / 2;
   grid-row: 2 / 2;
+  margin-right: 12px;
 }
 
-.pix-img {
-
+#pix-img {
+  width: 100%;
 }
 
 #weather-div {
   display: flex;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 h3 {
@@ -43,7 +45,7 @@ h3 {
 
 h4 {
   font-size: 1.3em;
-  margin: 30px 0 10px;
+  margin: 40px 0 10px;
   text-align: center;
   width: 100%;
 }
@@ -51,14 +53,14 @@ h4 {
 .timezone {
   justify-self: end;
   grid-column: 2 / 2;
-  margin-right: 20px;
+  margin-right: 12px;
 }
 
 .bold {
   font-weight: bold;
 }
 
-.forecast-div {
+.weather-div {
   background-color: #eee;
   border: 1px solid #000;
   color: #222;
@@ -67,7 +69,16 @@ h4 {
   padding: 10px;
 }
 
+.forecast-div {
+  max-width: 200px;
+}
+
+.historical-div {
+  display: flex;
+  justify-content: space-between;
+}
 
 .dest-name {
   font-size: 1.5em;
+  text-transform: capitalize;
 }
